# libhyscancache

./: CMakeLists.txt  readme.md
doc/: Doxyfile  html_header  mainpage.doxy
hyscancache/: CMakeLists.txt  hyscan-cache-client.c  hyscan-cache-client.h  hyscan-cache-exports.h  hyscan-cache-rpc.h  hyscan-cache-server.c  hyscan-cache-server.h  hyscan-cache.c  hyscan-cache.h  hyscan-cached.c  hyscan-cached.h  hyscan-hash.cc  hyscan-hash.h  hyscancache.pc.in
tests/: CMakeLists.txt  cache-test.c
